argocd/configurations/home-lab/joplin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-server
  namespace: joplin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      labels:
        app: joplin
    spec:
      containers:
        - name: joplin
          image: joplin/server:3.7.1
          ports:
            - containerPort: 22300
