argocd/configurations/home-lab/joplin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin-service
  namespace: joplin
spec:
  selector:
    app: joplin
  ports:
    - protocol: TCP
      port: 22300
      targetPort: 22300
